minor alignment fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -85,7 +85,7 @@ li {
 }
 
 .git-link {
-  margin-left: 480px;
+  margin-left: 180px;
   font-family: "Montserrat", sans-serif;
 }
 .link {
